update endpoint login add username, email
